[package]
name = "nexus42d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nexus Daemon — local supervisor for the CLI"

[lib]
name = "nexus42d"
path = "src/lib.rs"

[[bin]]
name = "nexus42d"
path = "src/main.rs"

[dependencies]
nexus-home-layout = { path = "../nexus-home-layout" }
nexus-contracts = { path = "../nexus-contracts" }
nexus-domain = { path = "../nexus-domain" }
nexus-local-db = { path = "../nexus-local-db" }
nexus-sync = { path = "../nexus-sync" }
nexus-orchestration = { path = "../nexus-orchestration" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
toml = "0.8"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
statig = { version = "0.3", features = ["async"] }
tempfile = "3"
async-trait = "0.1"

[dev-dependencies]
axum-test = "15"
graph-flow = "=0.2.3"
nexus-orchestration = { path = "../nexus-orchestration" }

[features]
test-support = []
