[package]
name = "nexus-desktop"
version = "0.1.0"
edition = "2021"
description = "Nexus Tauri v2 desktop shell (macOS-first, unsigned dev build)."
authors = ["42ch"]
license = "Apache-2.0"
publish = false

# NOTE: This crate is intentionally a STANDALONE Tauri-managed crate.
# It is NOT a member of the root Cargo workspace (compass §5 #9).
# `cargo check` / `cargo build` must be run from this directory, not the repo
# root, so Tauri's build script + generated context resolve correctly.
# The empty `[workspace]` table below makes this directory its own workspace
# root, preventing cargo from auto-including it in the parent workspace.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Home-directory + config resolution for the workspace-root path guard (§5 #8).
# Mirrors the daemon's workspace_root source (`crates/nexus42/src/config.rs`):
# `~/.nexus42/config.toml` → `workspace_path`.
dirs = "5"
toml = "0.8"
# The standalone opener engine (same crate tauri-plugin-opener wraps). Used by
# the custom `open_with`/`reveal_in_finder` commands AFTER the runtime path
# guard accepts the path — calling it directly avoids coupling to the plugin's
# Rust extension-trait API surface and is the canonical macOS mechanism.
opener = "0.7"
# Async runtime primitives for the sidecar lifecycle monitor (shared state + timers).
tokio = { version = "1.35", features = ["sync", "time", "net", "rt", "macros"] }
# Lightweight loopback health probe; reuses the same HTTP endpoint as the SPA.
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(unix)'.dependencies]
# Unix signal handling for graceful sidecar shutdown (SIGTERM). V1.66 is macOS-only.
nix = { version = "0.28", features = ["signal", "process"] }

[dev-dependencies]
# Path-guard unit tests build temp workspace trees.
tempfile = "3"
